// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiButton is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiButton testClass1 testClass2 emotion-euiButtonDisplay-m-defaultMinWidth-base-primary-euiTestCss"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButton props color accent is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-accent"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</button>
`;

exports[`EuiButton props color accentSecondary is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-accentSecondary"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</button>
`;

exports[`EuiButton props color danger is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-danger"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</button>
`;

exports[`EuiButton props color neutral is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-neutral"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</button>
`;

exports[`EuiButton props color primary is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-primary"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</button>
`;

exports[`EuiButton props color risk is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-risk"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</button>
`;

exports[`EuiButton props color success is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-success"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</button>
`;

exports[`EuiButton props color text is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-text"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</button>
`;

exports[`EuiButton props color warning is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-warning"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</button>
`;

exports[`EuiButton props contentProps is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-primary"
  type="button"
>
  <span
    aria-label="aria-label"
    class="testClass1 testClass2 emotion-euiButtonDisplayContent-euiTestCss"
    data-test-subj="test subject string"
  >
    <span
      class="eui-textTruncate"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButton props fill is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</button>
`;

exports[`EuiButton props fullWidth is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-fullWidth-defaultMinWidth-base-primary"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</button>
`;

exports[`EuiButton props href secures the rel attribute when the target is _blank 1`] = `
<a
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-primary"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</a>
`;

exports[`EuiButton props iconSide left is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-primary"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  >
    <span
      color="inherit"
      data-euiicon-type="user"
    />
    <span
      class="eui-textTruncate"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButton props iconSide right is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-primary"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate"
    >
      Content
    </span>
    <span
      color="inherit"
      data-euiicon-type="user"
    />
  </span>
</button>
`;

exports[`EuiButton props iconSize m is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-primary"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  >
    <span
      color="inherit"
      data-euiicon-type="user"
    />
    <span
      class="eui-textTruncate"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButton props iconSize s is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-primary"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  >
    <span
      color="inherit"
      data-euiicon-type="user"
    />
    <span
      class="eui-textTruncate"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButton props iconType is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-primary"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  >
    <span
      color="inherit"
      data-euiicon-type="user"
    />
  </span>
</button>
`;

exports[`EuiButton props isDisabled is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-isDisabled-base-disabled"
  disabled=""
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</button>
`;

exports[`EuiButton props isDisabled renders a button even when href is defined 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-isDisabled-base-disabled"
  disabled=""
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</button>
`;

exports[`EuiButton props isDisabled renders if passed as disabled 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-isDisabled-base-disabled"
  disabled=""
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</button>
`;

exports[`EuiButton props isLoading is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-isDisabled-base-disabled"
  disabled=""
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  >
    <span
      aria-label="Loading"
      class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
      role="progressbar"
      style="border-color: #1750ba currentcolor currentcolor currentcolor;"
    />
  </span>
</button>
`;

exports[`EuiButton props isSelected is rendered as false 1`] = `
<button
  aria-pressed="false"
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-primary"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</button>
`;

exports[`EuiButton props isSelected is rendered as true 1`] = `
<button
  aria-pressed="true"
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-primary"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</button>
`;

exports[`EuiButton props minWidth is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-base-primary"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</button>
`;

exports[`EuiButton props size m is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-primary"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</button>
`;

exports[`EuiButton props size s is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-s-defaultMinWidth-base-primary"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  />
</button>
`;

exports[`EuiButton props textProps is rendered 1`] = `
<button
  class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-primary"
  type="button"
>
  <span
    class="emotion-euiButtonDisplayContent"
  >
    <span
      aria-label="aria-label"
      class="eui-textTruncate testClass1 testClass2 emotion-euiTestCss"
      data-test-subj="test subject string"
    >
      Content
    </span>
  </span>
</button>
`;
